# jde-health-dashboard

./: Cargo.toml  Trunk.toml  dashboard_data.json  index.html
data/: APRTairports.json  LifeScan_OLD_TR_vmjdlsjj29_ps_health.json  health_check.json  vmjdlsjj59_health.json  vmjdlsjj59_health_check.json  {code:ObjectNotFound,message:The object 'targets.txt' was not found in the bucket 'JDE_Monitoring_Data'}
data_folder/: LSJJNEWTR_vmjdlsjj59_dv_20260411-1304_health.json  LSJJNEWTR_vmjdlsjj59_dv_20260411-1438_health.json  LSJJNEWTR_vmjdlsjj59_dv_20260411-1759_health.json  LSJJNEWTR_vmjdlsjj59_dv_20260412-1741_health.json  LSJJNEWTR_vmjdlsjj59_dv_20260412-1753_health.json  LSJJNEWTR_vmjdlsjj59_dv_20260413-0222_health.json  LSJJNEWTR_vmjdlsjj59_dv_20260413-0258_health.json  LSJJNEWTR_vmjdlsjj59_dv_20260413-0315_health.json  LSJJNEWTR_vmjdlsjj59_dv_20260413-0322_health.json  LSJJNEWTR_vmjdlsjj59_dv_20260413-0346_health.json  LSJJNEWTR_vmjdlsjj59_py_20260411-1304_health.json  LSJJNEWTR_vmjdlsjj59_py_20260411-1438_health.json  LSJJNEWTR_vmjdlsjj59_py_20260411-1759_health.json  LSJJNEWTR_vmjdlsjj59_py_20260412-1741_health.json  LSJJNEWTR_vmjdlsjj59_py_20260412-1753_health.json  LSJJNEWTR_vmjdlsjj59_py_20260413-0222_health.json  LSJJNEWTR_vmjdlsjj59_py_20260413-0258_health.json  LSJJNEWTR_vmjdlsjj59_py_20260413-0316_health.json  LSJJNEWTR_vmjdlsjj59_py_20260413-0323_health.json  LSJJNEWTR_vmjdlsjj59_py_20260413-0346_health.json  LSJJOLDTR_vmjdlsjj29_dv_20260411-1243_health.json  LSJJOLDTR_vmjdlsjj29_dv_20260412-1740_health.json  LSJJOLDTR_vmjdlsjj29_dv_20260412-1753_health.json  (+33 more)
(+220 files in other folders)
