[package]
name = "jde-health-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.5", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.4"
wasm-bindgen = "0.2"
js-sys = "0.3"  # Added this for the random number generator
gloo-timers = "0.4.0"
