[package]
name = "jde-health-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.5.7", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
gloo-net = "0.4"
gloo-timers = "0.2"
futures = "0.3"
urlencoding = "2.1"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }